Custom CssClass for ContextMenuItem

--- a/Radzen.Blazor/RadzenContextMenu.razor
+++ b/Radzen.Blazor/RadzenContextMenu.razor
@@ -21,7 +21,7 @@
                             <hr />
                         }
                         else {
-                            <RadzenMenuItem Text="@item.Text" Value="@item.Value" Icon="@item.Icon" IconColor="@item.IconColor" Image="@item.Image" Disabled=@item.Disabled></RadzenMenuItem>
+                            <RadzenMenuItem Text="@item.Text" Value="@item.Value" Icon="@item.Icon" IconColor="@item.IconColor" Image="@item.Image" Disabled=@item.Disabled class="@item.CssClass"></RadzenMenuItem>
                         }
                     }
                 </RadzenMenu>
