--- a/Radzen.Blazor/Rendering/Popup.razor
+++ b/Radzen.Blazor/Rendering/Popup.razor
@@ -24,7 +24,7 @@
     [Parameter]
     public EventCallback Close { get; set; }
 
-    public async Task ToggleAsync(ElementReference target, bool disableSmartPosition = false)
+    public async Task ToggleAsync(ElementReference target, bool disableSmartPosition = false, bool autoFocusFirstElement = true)
     {
         open = !open;
         this.target = target;
@@ -32,7 +32,7 @@
         if (open)
         {
             await Open.InvokeAsync(null);
-            await JSRuntime.InvokeVoidAsync("Radzen.openPopup", target, GetId(), false, null, null, null, Reference, nameof(OnClose), true, disableSmartPosition);
+            await JSRuntime.InvokeVoidAsync("Radzen.openPopup", target, GetId(), false, null, null, null, Reference, nameof(OnClose), true, autoFocusFirstElement, disableSmartPosition);
         }
         else
         {
