Revert "Remove markup string (#2066)"
This reverts commit b2541527461c9d361a22c7d55d8e0e8903076a94.

--- a/Radzen.Blazor/Rendering/DialogContainer.razor
+++ b/Radzen.Blazor/Rendering/DialogContainer.razor
@@ -15,7 +15,7 @@
                     }
                     else
                     {
-                        @Dialog.Title
+                        @((MarkupString)Dialog.Title)
                     }
                 </div>
                 @if (Dialog.Options.ShowClose)
