--- a/Radzen.Blazor/RadzenTooltip.razor
+++ b/Radzen.Blazor/RadzenTooltip.razor
@@ -8,7 +8,9 @@
         <div class="rz-tooltip-content @getCssClass(tooltip)" style="@tooltip.Options.Style">
             @if (!string.IsNullOrEmpty(tooltip.Options.Text))
             {
-                <div>@tooltip.Options.Text</div>
+                <div>
+                    @((MarkupString)tooltip.Options.Text)
+                </div>
             }
             else if (tooltip.Options.ChildContent != null)
             {
